css/styles.css
body {
  height: 100%;
  width: 100%;
  margin: 0;
  font-family: "Lato", sans-serif;
  font-size: 16px;
  background-color: white;
}

/* SCROLL TO TOP BUTTON */
#scroll_to_top_button {
  display: none;
  position: fixed;
  bottom: 10px;
  right: 10px;
  z-index: 99;
  height: 45;
  width: 45;
  font-size: 18px;
  border: none;
  outline: none;
  background-color: rgb(95, 0, 0);
  color: white;
  cursor: pointer;
  border-radius: 999px;
}
#scroll_to_top_button:hover {
  background-color: rgb(122, 0, 0);
}
#scroll_to_top_button:active {
  background-color: rgb(70, 0, 0);
}
#scroll_to_top_button i {
  margin-top: -4px;
  font-size: 24px;
}

/* TOP NAVIGATION BAR */
.topnav {
  position: absolute;
  z-index: 999;
  top: 10px;
  right: 85px;
  transform: translate(-50%);
}
@media screen and (max-width: 800px) {
  .topnav {
    position: absolute;
    z-index: 999;
    top: 10px;
    left: 10px;
    transform: translate(0%);
  }
}

.topnav_link_text {
  position: relative;
  display: inline-block;
  padding: 10px;
  text-decoration: none;
  color: #f2f2f2;
  text-align: center;
  margin: 5px;
  font-size: 17px;
  transition: all 0.2s;
}
.topnav_link_text::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 100%;
  height: 1px;
  transition: all 0.25s cubic-bezier(1, 0.68, 0.16, 0.9);
}
/*
.topnav_link_text:hover {
  color: #bebebe;
}
.topnav_link_text:hover::after {
  right: 0;
  height: 2px;
  background-color: #f2f2f2;
}
*/
@media (hover: hover) {
  .topnav_link_text:hover {
    color: #bebebe;
  }
  
  .topnav_link_text:hover::after {
    right: 0;
    height: 2px;
    background-color: #f2f2f2;
  }
}

.topnav_link_text:active {
  background-color: #f2f2f2;
  color: black;
}

/* LANGUAGE */
#language_container {
  position: absolute;
  z-index: 999;
  top: 22px;
  right: 22px;
}
.language_button {
  position: relative;
  display: inline-block;
  background-color: transparent;
  height: 25px;
  border: none;
  color: white;
  text-align: center;
  padding: 5px 5px;
  font-size: 12.5px;
  cursor: pointer;
  transition: all 0.2s;
}
.language_button::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 100%;
  height: 1px;
  transition: all 0.25s cubic-bezier(1, 0.68, 0.16, 0.9);
}
.language_button:hover {
  color: #bebebe;
}
.language_button:hover::after {
  right: 0;
  height: 2px;
  background-color: #f2f2f2;
}
.language_button:active {
  background-color: #f2f2f2;
  color: black;
}

/* INTRO AREA */
#intro {
  height: 100vh;
  background: rgb(95, 0, 0);
}
#intro_content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  white-space: nowrap;
}
#intro_content h1 {
  color: #ffffff;
  font-weight: 900;
  font-size: 6vw;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  line-height: 0.9em;
  margin: 0;
  padding: 0;
}
#intro_content h2 {
  color: rgb(204, 203, 203);
  font-weight: 500;
  font-size: 2vw;
  margin: 0;
}
@media screen and (max-width: 800px) {
  #intro_content h1 {
    font-size: 8vw;
  }
  #intro_content h2 {
    font-size: 3.3vw;
  }
}

/* ABOUT AREA */
#about {
  max-width: 1180px;
  margin: 0 auto;
  padding: 75px 50px;
  border-bottom: 1px solid #dcd9d9;
}
#about_me_text {
  color: rgb(56, 56, 56);
  font-size: 30px;
  text-align: center;
}
#about_me_text:after {
  position: absolute;
  content: "";
  display: block;
  height: 2px;
  width: 80px;
  background: rgb(95, 0, 0);
  margin-top: 4px;
  left: 50%;
  transform: translateX(-50%);
}

#about_me_box {
  display: flex;
  margin-top: 50px;
}
#about_me_image_box {
  float: left;
}
#about_me_image {
  height: 400px;
  width: auto;
  border-radius: 20px;
  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2); /* Hinzufügen des Schattens */
  transition: transform 0.3s;
}
#about_me_image:hover {
  transform: scale(1.05);
}
#about_me_text_box {
  margin-left: 40px;
  margin-top: 10px;
  text-align: left;
}
#about_me_text_text {
  color: #74808a;
  font-size: 16px;
}

@media (max-width: 600px) {
  #about_me_box {
    flex-direction: column;
    align-items: center;
  }

  #about_me_image_box {
    float: none;
    margin-bottom: 10px;
  }

  #about_me_image {
    scale: 0.9;
  }

  #about_me_text_box {
    margin-left: 0px;
    margin-top: 0px;
  }
}

/* PROJECTS AREA */
#projects {
  max-width: 1180px;
  margin: 0 auto;
  padding: 100px 50px;
  border-bottom: 1px solid #dcd9d9;
}
#my_projects_text {
  color: rgb(56, 56, 56);
  margin-bottom: 30px;
  font-size: 30px;
  text-align: center;
  margin-bottom: 50px;
}
#my_projects_text:after {
  position: absolute;
  content: "";
  display: block;
  height: 2px;
  width: 80px;
  background: rgb(95, 0, 0);
  margin-top: 4px;
  left: 50%;
  transform: translateX(-50%);
}

/* Single Project */
.project_box {
  display: flex;
  align-items: center;
}
@media (max-width: 900px) {
  .project_box {
    align-items: center;
    flex-direction: column-reverse;
  }
}

.project_divider {
  margin-top: 100px;
  margin-bottom: 100px;
  width: 100%;
  height: 0.1%;
  background-color: rgb(95, 0, 0);
  border: none;
  outline: none;
}

.project_box_text {
  text-align: left;
  flex-basis: 40%;
}

.project_code_list {
  list-style-position: inside;
  padding: 0;
  margin-top: 20px;
  margin-bottom: 20px;
}
.project_code_list li {
  color: black;
  margin-bottom: 6px;
}

/* Show project button */
.project_link {
  position: relative;
  height: 50px;
  width: 150px;
  border-bottom: 1px solid rgb(95, 0, 0);
}
.project_link::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 100%;
  background: rgb(95, 0, 0);
  height: 100%;
  z-index: -1;
  transition: all 0.2s cubic-bezier(1, 0.68, 0.16, 0.9);
}
.project_link p {
  position: relative;
  float: left;
  padding-left: 5px;
  color: black;
}
.project_link:hover::after,
.project_link:focus:after {
  right: 0;
  background: rgb(95, 0, 0);
}
.project_link:hover p {
  color: white;
}
.project_link:hover .github_image {
  background-image: url("../images/github-mark-white.png");
  position: absolute;
  right: 5px;
  top: 50%;
  transform: translateY(-50%);
  height: 30px;
}
.github_image {
  background-image: url("../images/github-mark.png");
  background-size: contain;
  position: absolute;
  right: 5px;
  top: 50%;
  transform: translateY(-50%);
  height: 30px;
  width: 30px;
}

/* Project image */
.project_box_image_box {
  margin-bottom: var(--gutter-normal);
  flex-basis: 60%;
}
@media (min-width: 901px) {
  .project_box_image_box {
    margin-left: 150px;
  }
}

.project_image {
  width: 100%;
  height: 100%;
  object-fit: contain;
  border-radius: 20px;
  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2); /* Hinzufügen des Schattens */
  transition: transform 0.3s;
}
.project_image:hover {
  transform: scale(1.03);
}

/* SKILLS AREA */
#skills {
  max-width: 1180px;
  margin: 0 auto;
  padding: 50px 50px;
  text-align: center;
}
#my_skills_text {
  color: rgb(56, 56, 56);
  margin-bottom: 30px;
  font-size: 30px;
}
#my_skills_text:after {
  position: absolute;
  content: "";
  display: block;
  height: 2px;
  width: 80px;
  background: rgb(95, 0, 0);
  margin-top: 4px;
  left: 50%;
  transform: translateX(-50%);
}
#skills ul {
  display: block;
  margin: 0 auto;
  padding: 0;
  max-width: 800px;
}
.single_skill {
  display: inline-block;
  margin: 7px;
  border-radius: 5px;
  padding: 8px 10px 5px 10px;
  color: #374054;
  background: #e4e4ea;
  list-style: none;
  cursor: default;
  text-align: center;
  font-size: 24px;
}

/* FOOTER/COPYRIGHT AREA */
footer {
  padding: 0px 0;
  text-align: center;
}
.copyright {
  padding-top: 100px;
  padding-left: 3px;
  padding-bottom: 3px;
}
.copyright p {
  margin: 0;
  color: #74808a;
}

